Refactor Main.java, README.md, and .gitignore files