@@ -5,9 +5,9 @@ import java.util.*;
  * Represents a node with x and y coordinates and a cost.
  */
 class Node {
-    private int x;
-    private int y;
-    private int cost;
+    private final int x;
+    private final int y;
+    private final int cost;
 
     public Node(int x, int y, int cost) {
         this.x = x;
@@ -32,7 +32,7 @@ class Node {
  * Represents a problem instance with nodes and a distance matrix.
  */
 class ProblemInstance {
-    private List<Node> nodes;
+    private final List<Node> nodes;
     private int[][] distanceMatrix;
 
     public ProblemInstance() {
@@ -59,7 +59,6 @@ class ProblemInstance {
                 nodes.add(new Node(x, y, cost));
             } catch (NumberFormatException e) {
                 // Skip rows with invalid integers
-                continue;
             }
         }
         reader.close();
@@ -97,8 +96,8 @@ class ProblemInstance {
  * Represents a solution with a path and its objective value.
  */
 class Solution {
-    private List<Integer> path;
-    private int objectiveValue;
+    private final List<Integer> path;
+    private final int objectiveValue;
 
     public Solution(List<Integer> path, int objectiveValue) {
         this.path = new ArrayList<>(path);
@@ -148,13 +147,71 @@ abstract class Heuristic {
         }
         return totalDistance + totalCost;
     }
+
+    protected static class InsertionPosition {
+        int position;
+        int increase;
+
+        public InsertionPosition(int position, int increase) {
+            this.position = position;
+            this.increase = increase;
+        }
+    }
+
+    protected static class InsertionInfo {
+        int position;
+        int bestIncrease;
+        int secondBestIncrease;
+
+        public InsertionInfo(int position, int bestIncrease, int secondBestIncrease) {
+            this.position = position;
+            this.bestIncrease = bestIncrease;
+            this.secondBestIncrease = secondBestIncrease;
+        }
+    }
+
+    protected InsertionPosition findBestInsertionPosition(List<Integer> path, int nodeToInsert, int[][] distanceMatrix) {
+        int bestPos = -1;
+        int minIncrease = Integer.MAX_VALUE;
+        int pathSize = path.size();
+        for (int i = 0; i < pathSize; i++) {
+            int current = path.get(i);
+            int next = path.get((i + 1) % pathSize);
+            int increase = distanceMatrix[current][nodeToInsert] + distanceMatrix[nodeToInsert][next] - distanceMatrix[current][next];
+            if (increase < minIncrease) {
+                minIncrease = increase;
+                bestPos = i + 1;
+            }
+        }
+        return new InsertionPosition(bestPos, minIncrease);
+    }
+
+    protected InsertionInfo findBestAndSecondBestInsertion(List<Integer> path, int nodeToInsert, int[][] distanceMatrix) {
+        int bestIncrease = Integer.MAX_VALUE;
+        int secondBestIncrease = Integer.MAX_VALUE;
+        int bestPos = -1;
+
+        for (int i = 0; i < path.size(); i++) {
+            int current = path.get(i);
+            int next = path.get((i + 1) % path.size());
+            int increase = distanceMatrix[current][nodeToInsert] + distanceMatrix[nodeToInsert][next] - distanceMatrix[current][next];
+
+            if (increase < bestIncrease) {
+                secondBestIncrease = bestIncrease;
+                bestIncrease = increase;
+                bestPos = i + 1;
+            } else if (increase < secondBestIncrease) {
+                secondBestIncrease = increase;
+            }
+        }
+        return new InsertionInfo(bestPos, bestIncrease, secondBestIncrease);
+    }
 }
 
 /**
  * Implements the Random Solution heuristic.
  */
 class RandomSolution extends Heuristic {
-
     @Override
     public Solution generateSolution(ProblemInstance instance, int k, int startNode) {
         List<Node> nodes = instance.getNodes();
@@ -164,7 +221,7 @@ class RandomSolution extends Heuristic {
             selectedNodes.add(i);
         }
         Collections.shuffle(selectedNodes, random);
-        selectedNodes = selectedNodes.subList(0, Math.min(k, selectedNodes.size())); // Select k nodes randomly
+        selectedNodes = selectedNodes.subList(0, Math.min(k, selectedNodes.size()));
         int objective = computeObjective(selectedNodes, instance);
         return new Solution(selectedNodes, objective);
     }
@@ -175,7 +232,6 @@ class RandomSolution extends Heuristic {
  * considering the sum of Euclidean distance and node cost.
  */
 class NearestNeighborEnd extends Heuristic {
-
     @Override
     public Solution generateSolution(ProblemInstance instance, int k, int startNode) {
         List<Node> nodes = instance.getNodes();
@@ -190,17 +246,15 @@ class NearestNeighborEnd extends Heuristic {
         selected.add(startNode);
         int[][] distanceMatrix = instance.getDistanceMatrix();
 
-        // Keep adding nodes only to the end of the path
         while (path.size() < k) {
-            int last = path.get(path.size() - 1);
+            int last = path.getLast();
             int nearest = -1;
             int minDist = Integer.MAX_VALUE;
 
-            // Find the nearest unselected node
             for (int node = 0; node < n; node++) {
                 if (!selected.contains(node)) {
                     int dist = distanceMatrix[last][node];
-                    int effectiveDistance = dist + nodes.get(node).getCost(); // Adding cost to the distance
+                    int effectiveDistance = dist + nodes.get(node).getCost();
                     if (effectiveDistance < minDist) {
                         minDist = effectiveDistance;
                         nearest = node;
@@ -226,7 +280,6 @@ class NearestNeighborEnd extends Heuristic {
  * considering the sum of Euclidean distance and node cost.
  */
 class NearestNeighborAny extends Heuristic {
-
     @Override
     public Solution generateSolution(ProblemInstance instance, int k, int startNode) {
         List<Node> nodes = instance.getNodes();
@@ -241,17 +294,15 @@ class NearestNeighborAny extends Heuristic {
         selected.add(startNode);
         int[][] distanceMatrix = instance.getDistanceMatrix();
 
-        // Keep adding nodes, choosing the nearest one and finding the best insertion point
         while (path.size() < k) {
             int nearest = -1;
             int minDist = Integer.MAX_VALUE;
 
-            // Find the nearest unselected node
             for (int node = 0; node < n; node++) {
                 if (!selected.contains(node)) {
                     for (int p_node : path) {
                         int dist = distanceMatrix[p_node][node];
-                        int effectiveDistance = dist + nodes.get(node).getCost(); // Adding cost to the distance
+                        int effectiveDistance = dist + nodes.get(node).getCost();
                         if (effectiveDistance < minDist) {
                             minDist = effectiveDistance;
                             nearest = node;
@@ -261,19 +312,8 @@ class NearestNeighborAny extends Heuristic {
             }
 
             if (nearest != -1) {
-                // Find the best position to insert the nearest node (simplified logic)
-                int bestPos = 0;
-                int minIncrease = Integer.MAX_VALUE;
-                for (int i = 0; i < path.size(); i++) {
-                    int current = path.get(i);
-                    int next = path.get((i + 1) % path.size());
-                    int increase = distanceMatrix[current][nearest] + distanceMatrix[nearest][next] - distanceMatrix[current][next];
-                    if (increase < minIncrease) {
-                        minIncrease = increase;
-                        bestPos = i + 1;
-                    }
-                }
-                path.add(bestPos, nearest);
+                InsertionPosition insertion = findBestInsertionPosition(path, nearest, distanceMatrix);
+                path.add(insertion.position, nearest);
                 selected.add(nearest);
             } else {
                 break; // No more nodes to add
@@ -289,7 +329,6 @@ class NearestNeighborAny extends Heuristic {
  * Implements the Greedy Cycle heuristic.
  */
 class GreedyCycle extends Heuristic {
-
     @Override
     public Solution generateSolution(ProblemInstance instance, int k, int startNode) {
         List<Node> nodes = instance.getNodes();
@@ -308,17 +347,8 @@ class GreedyCycle extends Heuristic {
             int bestScore = Integer.MAX_VALUE;
             for (int node = 0; node < n; node++) {
                 if (!selected.contains(node)) {
-                    // Find the minimum increase in distance for insertion
-                    int minIncrease = Integer.MAX_VALUE;
-                    for (int i = 0; i < path.size(); i++) {
-                        int current = path.get(i);
-                        int next = path.get((i + 1) % path.size());
-                        int increase = distanceMatrix[current][node] + distanceMatrix[node][next] - distanceMatrix[current][next];
-                        if (increase < minIncrease) {
-                            minIncrease = increase;
-                        }
-                    }
-                    // Define score as increase + node cost
+                    InsertionPosition insertion = findBestInsertionPosition(path, node, distanceMatrix);
+                    int minIncrease = insertion.increase;
                     int score = minIncrease + nodes.get(node).getCost();
                     if (score < bestScore) {
                         bestScore = score;
@@ -327,23 +357,11 @@ class GreedyCycle extends Heuristic {
                 }
             }
             if (bestNode != -1) {
-                // Insert the best_node at the position that minimizes the increase
-                int bestIncrease = Integer.MAX_VALUE;
-                int bestPos = -1;
-                for (int i = 0; i < path.size(); i++) {
-                    int current = path.get(i);
-                    int next = path.get((i + 1) % path.size());
-                    int increase = distanceMatrix[current][bestNode] + distanceMatrix[bestNode][next] - distanceMatrix[current][next];
-                    if (increase < bestIncrease) {
-                        bestIncrease = increase;
-                        bestPos = i + 1;
-                    }
-                }
-                if (bestPos != -1) {
-                    path.add(bestPos, bestNode);
+                InsertionPosition insertion = findBestInsertionPosition(path, bestNode, distanceMatrix);
+                if (insertion.position != -1) {
+                    path.add(insertion.position, bestNode);
                     selected.add(bestNode);
                 } else {
-                    // Append at the end if no better position found
                     path.add(bestNode);
                     selected.add(bestNode);
                 }
@@ -428,17 +446,12 @@ class Greedy2Regret extends Heuristic {
  * Implements the Greedy heuristic with weighted sum criterion (2-Regret + Best Increase).
  */
 class GreedyWeightedRegret extends Heuristic {
-    private double w1; // Weight for regret
-    private double w2; // Weight for best increase
+    private final double w1; // Weight for regret
+    private final double w2; // Weight for best increase
 
     public GreedyWeightedRegret() {
-        this.w1 = 2.5;
-        this.w2 = 1.1;
-    }
-
-    public GreedyWeightedRegret(double w1, double w2) {
-        this.w1 = w1;
-        this.w2 = w2;
+        this.w1 = 0.5;
+        this.w2 = 0.5;
     }
 
     @Override
@@ -463,32 +476,16 @@ class GreedyWeightedRegret extends Heuristic {
                 if (selected.contains(node)) {
                     continue;
                 }
-                int bestIncrease = Integer.MAX_VALUE;
-                int secondBestIncrease = Integer.MAX_VALUE;
-                int bestPos = -1;
+                InsertionInfo insertionInfo = findBestAndSecondBestInsertion(path, node, distanceMatrix);
 
-                // Evaluate all possible insertion positions
-                for (int i = 0; i < path.size(); i++) {
-                    int current = path.get(i);
-                    int next = path.get((i + 1) % path.size());
-                    int increase = distanceMatrix[current][node] + distanceMatrix[node][next] - distanceMatrix[current][next] + nodes.get(node).getCost();
-
-                    if (increase < bestIncrease) {
-                        secondBestIncrease = bestIncrease;
-                        bestIncrease = increase;
-                        bestPos = i + 1;
-                    } else if (increase < secondBestIncrease) {
-                        secondBestIncrease = increase;
-                    }
-                }
-
-                int regretValue = secondBestIncrease - bestIncrease;
-                double weightedValue = w1 * regretValue - w2 * bestIncrease; // Subtracting bestIncrease because lower is better
+                int regretValue = insertionInfo.secondBestIncrease - insertionInfo.bestIncrease;
+                double weightedValue = w1 * regretValue - w2 * insertionInfo.bestIncrease;
+                weightedValue -= nodes.get(node).getCost();
 
                 if (weightedValue > bestWeightedValue) {
                     bestWeightedValue = weightedValue;
                     bestNode = node;
-                    bestInsertionPosition = bestPos;
+                    bestInsertionPosition = insertionInfo.position;
                 }
             }
 
@@ -509,10 +506,10 @@ class GreedyWeightedRegret extends Heuristic {
  * Utility class to compute statistics for a list of solutions.
  */
 class Statistics {
-    private int minObjective;
-    private int maxObjective;
-    private double avgObjective;
-    private List<Integer> bestPath;
+    private final int minObjective;
+    private final int maxObjective;
+    private final double avgObjective;
+    private final List<Integer> bestPath;
 
     public Statistics(int minObjective, int maxObjective, double avgObjective, List<Integer> bestPath) {
         this.minObjective = minObjective;
@@ -581,7 +578,7 @@ public class Main {
         }
 
         // List all CSV files in the input directory
-        File[] inputFiles = inputDir.listFiles((dir, name) -> name.toLowerCase().endsWith(".csv"));
+        File[] inputFiles = inputDir.listFiles((_, name) -> name.toLowerCase().endsWith(".csv"));
 
         // Sort the files by name
         if (inputFiles != null) {
@@ -716,7 +713,7 @@ public class Main {
             writer.newLine();
         }
         if (!bestPath.isEmpty()) {
-            writer.write(bestPath.get(0).toString());
+            writer.write(bestPath.getFirst().toString());
         }
         writer.close();
     }
